// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar matches snapshot with balance 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "marginBottom": "8px",
        "paddingBottom": "8px",
        "paddingLeft": "12px",
        "paddingRight": "8px",
        "paddingTop": "8px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "MozTransitionProperty": "opacity",
            "MozUserSelect": "none",
            "WebkitTransitionDuration": "0.15s",
            "WebkitTransitionProperty": "opacity",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(203,203,203,1.00)",
            "borderBottomColor": "rgba(163,163,163,1.00)",
            "borderBottomLeftRadius": "21px",
            "borderBottomRightRadius": "21px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(163,163,163,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(163,163,163,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(163,163,163,1.00)",
            "borderTopLeftRadius": "21px",
            "borderTopRightRadius": "21px",
            "borderTopWidth": "1px",
            "height": "42px",
            "msUserSelect": "none",
            "transitionDuration": "0.15s",
            "transitionProperty": "opacity",
            "userSelect": "none",
            "width": "42px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "borderBottomLeftRadius": "20px",
              "borderBottomRightRadius": "20px",
              "borderTopLeftRadius": "20px",
              "borderTopRightRadius": "20px",
              "height": "40px",
              "width": "40px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "borderBottomLeftRadius": "20px",
                "borderBottomRightRadius": "20px",
                "borderTopLeftRadius": "20px",
                "borderTopRightRadius": "20px",
                "flexBasis": "auto",
                "height": "40px",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "width": "40px",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"unknownProfile.svg\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="unknownProfile.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "baseline",
            "WebkitBoxAlign": "baseline",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "alignItems": "baseline",
            "display": "flex",
            "flexDirection": "row",
            "msFlexAlign": "baseline",
            "msFlexDirection": "row",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(85,85,85,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto Slab",
              "fontSize": "36px",
              "fontWeight": "700",
              "lineHeight": "30px",
              "marginRight": "2px",
              "textAlign": "right",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          -.--
        </div>
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "16px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(85,85,85,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto Slab",
                "fontSize": "18px",
                "fontWeight": "700",
                "lineHeight": "24px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            G
          </span>
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
            dir="auto"
            style={
              Object {
                "color": "rgba(85,85,85,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto Slab",
                "fontSize": "17.5px",
                "fontWeight": "700",
                "lineHeight": "21px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            $
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar matches snapshot without balance 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "marginBottom": "8px",
        "paddingBottom": "8px",
        "paddingLeft": "12px",
        "paddingRight": "8px",
        "paddingTop": "8px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "MozTransitionProperty": "opacity",
            "MozUserSelect": "none",
            "WebkitTransitionDuration": "0.15s",
            "WebkitTransitionProperty": "opacity",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(203,203,203,1.00)",
            "borderBottomColor": "rgba(163,163,163,1.00)",
            "borderBottomLeftRadius": "21px",
            "borderBottomRightRadius": "21px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(163,163,163,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(163,163,163,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(163,163,163,1.00)",
            "borderTopLeftRadius": "21px",
            "borderTopRightRadius": "21px",
            "borderTopWidth": "1px",
            "height": "42px",
            "msUserSelect": "none",
            "transitionDuration": "0.15s",
            "transitionProperty": "opacity",
            "userSelect": "none",
            "width": "42px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "borderBottomLeftRadius": "20px",
              "borderBottomRightRadius": "20px",
              "borderTopLeftRadius": "20px",
              "borderTopRightRadius": "20px",
              "height": "40px",
              "width": "40px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "borderBottomLeftRadius": "20px",
                "borderBottomRightRadius": "20px",
                "borderTopLeftRadius": "20px",
                "borderTopRightRadius": "20px",
                "flexBasis": "auto",
                "height": "40px",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "width": "40px",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"unknownProfile.svg\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="unknownProfile.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopBar should render the children component 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,1.00)",
        "borderBottomLeftRadius": "5px",
        "borderBottomRightRadius": "5px",
        "borderTopLeftRadius": "5px",
        "borderTopRightRadius": "5px",
        "marginBottom": "8px",
        "paddingBottom": "8px",
        "paddingLeft": "12px",
        "paddingRight": "8px",
        "paddingTop": "8px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "row",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "MozTransitionProperty": "opacity",
            "MozUserSelect": "none",
            "WebkitTransitionDuration": "0.15s",
            "WebkitTransitionProperty": "opacity",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(203,203,203,1.00)",
            "borderBottomColor": "rgba(163,163,163,1.00)",
            "borderBottomLeftRadius": "21px",
            "borderBottomRightRadius": "21px",
            "borderBottomWidth": "1px",
            "borderLeftColor": "rgba(163,163,163,1.00)",
            "borderLeftWidth": "1px",
            "borderRightColor": "rgba(163,163,163,1.00)",
            "borderRightWidth": "1px",
            "borderTopColor": "rgba(163,163,163,1.00)",
            "borderTopLeftRadius": "21px",
            "borderTopRightRadius": "21px",
            "borderTopWidth": "1px",
            "height": "42px",
            "msUserSelect": "none",
            "transitionDuration": "0.15s",
            "transitionProperty": "opacity",
            "userSelect": "none",
            "width": "42px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(0,0,0,0.00)",
              "borderBottomLeftRadius": "20px",
              "borderBottomRightRadius": "20px",
              "borderTopLeftRadius": "20px",
              "borderTopRightRadius": "20px",
              "height": "40px",
              "width": "40px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "borderBottomLeftRadius": "20px",
                "borderBottomRightRadius": "20px",
                "borderTopLeftRadius": "20px",
                "borderTopRightRadius": "20px",
                "flexBasis": "auto",
                "height": "40px",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "width": "40px",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"unknownProfile.svg\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="unknownProfile.svg"
            />
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "16px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          Children element
        </div>
      </div>
    </div>
  </div>
</div>
`;
